--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 twilio.accountSID=testSID
 twilio.authToken=testToken
 twilio.appId=12345
-twilio.authyApiKey=testAuthykey
+twilio.apiKey=testAuthykey
