--- a/pom.xml
+++ b/pom.xml
@@ -62,12 +62,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
     </dependencies>
-   <build>
+   <!-- build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build -->
 </project>
